--- a/introduction.tex
+++ b/introduction.tex
@@ -179,7 +179,7 @@ This can be achieved in two ways\yyy{,}{:}\endnote{%
   I believe that I have commented on the preceding elsewhere.
   The punctuation to introduce a list (that is, the end of the phrase immediately preceding the list) should not be
   ``,'', but more likely a colon, or possibly a period.
-}
+}\elabel{comma-before-list}
 \begin{description}
 \item [Embedding (\chapterReference{chap:embedding}{Chapter 4}):]
 
