reviewed endnotes for Chapter 3 (proposedWork.tex).

--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -73,18 +73,15 @@ discussed below{\large,} along with their shortcomings.
     ``exist'' or ``exists''?
 }
   in \progLang{Prolog}.\endnote{%
-    What does this point mean?
-    \mehul{I would have to think\yyy{}{\Large;} I do not remember.}
+    \david{What does this point mean?}
+    \mehul{I would have to think; I do not remember.}
 }
 \end{enumerate}
 
 And as far as the idea of merging paradigms goes, it is not the main focus of this thesis and can be more of an
 ``add-on''.
 A handful of crossover hybrid languages based on \progLang{Haskell} exist, \progLang{Curry} \cite{website:curry}
-being the prominent one.\endnote{%
-  I think that this fits in with the discussion of \progLang{Scala} in the previous chapter.
-  \mehul{added \progLang{Scala} stuff in previous chapter}
-}
+being the prominent one.
 Moving away from \progLang{Haskell} and exploring other languages from different paradigms, a respectable number of
 crossover implementations exist but again most of them have faded out.\endnote{%
   \S~\ref{sec:what-this-chapter:proposedWork} says that this chapter is about embedding programming languages.
@@ -131,7 +128,7 @@ A third question to address is the accommodation of input and output, specifical
 Moreover, \progLang{Prolog} is an untyped language which allows lists with elements of different types to be
 created.
 Something like this is not by default in \progLang{Haskell}.
-Hence syntactic support for the same is the next question to address.\eref{not-a-sentence}
+Hence syntactic support for the same is the next question to address.
 Furthermore, experimenting with how programs expressed with same declarative meaning differ operationally.\eref{not-a-sentence}
 Lastly, how would characteristics of hybrid languages fit into and play a role in an embedded setting.\eref{not-a-sentence}
 
