Space only change in "multiparadigm.tex".

--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -116,21 +116,28 @@ The list of multi paradigm languages is huge, but in this thesis we will mostly 
 
 \section{Functional Logic Programming Languages}
 
-Knowing that there is quite some amount of literature out there on these type of languages, it is fairly easy to say that there have been numerous 
-attempts at specifications and/or implementations. Sadly though not many have survived leave alone being successful as a result of the competition. 
-Only the ones that are easily available or have an implementation or have been cited or referred by other attempts have been included as the list is long 
-and does not reflect the main intention of the document. Beginning with the ones from Australia, which seems to be a popular destination for fiddling 
-with \progLang{Prolog} and merging paradigms. As of now there have been three popular ones, beginning with \progLang{Neu Prolog}, 
-\cite{website:nue-prolog}, \progLang{Oz (Mozart Programming System)} \cite{website:oz-mozart} and \progLang{Mercury} \cite{website:mercury}. 
-Delving deeper the languages feel more like extensions of \progLang{Prolog} rather than hybrids. Starting with \progLang{Mercury} which a boundary 
-between deterministic and non-deterministic programs, similarly \progLang{Nue Prolog} has special support for functions while \progLang{Oz} gives  
-concurrent constraint programming plus distributed support, with different function types for goal solving and expression rewriting.  \progLang{Escher} 
-\cite{lloyd1999programming:escher} comes very close to \progLang{Haskell} with monads, higher order functions and lazy evaluation. Taking a look at 
-\progLang{Prolog} variants, \progLang{Ciao} \cite{website:ciao}; a preprocessor to \progLang{Prolog} for functional syntax support, \progLang{$\lambda
-$ Prolog} \cite{website:lambda-prolog} aims at modular higher order programming with abstract data types in a logical setting, \progLang{Babel} \cite{
-website:babel,moreno1992logic, moreno1988babel} combines pure \progLang{Prolog} with a first order functional notation, \progLang{LIFE} \cite{
-website:life} is for  Logic, Inheritance, Functions and Equations in \progLang{Prolog} syntax with currying and other features like functional languages 
-and others \cite{bert1987lpg,malachi1984tablog}.
+Knowing \xxx{that there is} \yyy{quite some}{the} amount of literature \xxx{out there} on these type of languages, it is fairly easy to say that there have been numerous 
+attempts at specifications and\xxx{/or} implementations.
+Sadly though not many have survived leave alone being successful as a result of the competition.
+Only the ones that are easily available or have an implementation or have been cited or referred by other attempts
+have been included as the list is long and does not reflect the main intention of the document.
+Beginning with the ones from Australia, which seems to be a popular destination for fiddling with \progLang{Prolog}
+and merging paradigms.
+As of now there have been three popular ones, beginning with \progLang{Neu Prolog}, \cite{website:nue-prolog},
+\progLang{Oz (Mozart Programming System)} \cite{website:oz-mozart} and \progLang{Mercury} \cite{website:mercury}.
+Delving deeper the languages feel more like extensions of \progLang{Prolog} rather than hybrids.
+Starting with \progLang{Mercury} which a boundary between deterministic and non-deterministic programs, similarly
+\progLang{Nue Prolog} has special support for functions while \progLang{Oz} gives concurrent constraint programming
+plus distributed support, with different function types for goal solving and expression rewriting.
+\progLang{Escher} \cite{lloyd1999programming:escher} comes very close to \progLang{Haskell} with monads, higher
+order functions and lazy evaluation.
+Taking a look at \progLang{Prolog} variants, \progLang{Ciao} \cite{website:ciao}; a preprocessor to
+\progLang{Prolog} for functional syntax support, \progLang{$\lambda $ Prolog} \cite{website:lambda-prolog} aims at
+modular higher order programming with abstract data types in a logical setting, \progLang{Babel}
+\cite{website:babel,moreno1992logic, moreno1988babel} combines pure \progLang{Prolog} with a first order functional
+notation, \progLang{LIFE} \cite{website:life} is for  Logic, Inheritance, Functions and Equations in
+\progLang{Prolog} syntax with currying and other features like functional languages and others
+\cite{bert1987lpg,malachi1984tablog}.
 
 The functional language \progLang{Scheme} is a very popular choice for this sort of a thing. With a book \cite{friedman05reasoned} and an implementation to accompany \cite{website:kanren,website:minkanren} which seems to have translated into \progLang{Haskell}, 
 \cite{website:haskellkanren,website:molog,website:minikanrent}. 
