Small changes to embedding.tex .

--- a/embedding.tex
+++ b/embedding.tex
@@ -9,11 +9,6 @@
 
 \section{What is this chapter about}
 
-\noindent\rule{0.95\textwidth}{2.8pt}\endnote{%
-  Section heading and dividing line moved into the Chapter.
-}
-
-
 The art of embedding a programming language into another one has been explored a number of times in the form
 of building libraries or developing Foreign Function Interfaces and so on. This area mainly aims at an environment
 and setting where two or more languages can work with each other harmoniously with each one able to play a part
@@ -36,13 +31,10 @@ A lot has been talked about embedding languages and also the techniques and meth
 It might not seem such a hot topic as such but it has always been a part of any programming language to work and
 integrate their code with other programming languages.
 One of the top discussions are in, Lambda the Ultimate, The Programming Languages Weblog
-\cite{website:lambda-the-ultimate},  which lists a number of \progLang{Prolog} implementations in a variety of
+\cite{website:lambda-the-ultimate}\xxx{,  which} lists a number of \progLang{Prolog} implementations in a variety of
 languages like \progLang{Lisp, Scheme, Scala, Java, Javascript}, \progLang{Racket} \cite{racklog} and so on.
 Moreover the discussion focuses on a lot of critical points that should be considered in a translation of
-\progLang{Prolog} to the host language in terms of types and modules among others.\endnote{%
-  This sentence wanders on.
-  Cut at ``regarding'' and then write a second sentence, or reword.
-}
+\progLang{Prolog} to the host language in terms of types and modules among others.
 
 One of the implementations discussed redirects us to one of the earliest implementations of \progLang{Prolog}
 in \progLang{Haskell} for Hugs 98, called Mini \progLang{Prolog} \cite{website:mini-prolog-hugs98}.\endnote{%
@@ -93,18 +85,18 @@ family of Declarative Languages.\endnote{%
   \david{What does this sentence mean?
   Are you suggesting that one of \progLang{Prolog}'s problems is that it is
   competing with \progLang{Haskell}?
-  }
+  }\par
   \mehul{
   Well \progLang{Haskell} has a lot of advantages over \progLang{Prolog} despite being from the same paradigm
-  \par
+  \newline
   So a choice has to be made for a declarative language why not \progLang{Haskell} ?}
 }
 Not to forget \progLang{Haskell} also has some tricks \cite{website:logic-programming-haskell} up its sleeve which
 enables encoding of search problems.\endnote{%
-  I have lost track of the general argument here.
-  What is the unofficially published content saying about \progLang{Prolog} here?
+  \david{I have lost track of the general argument here.
+  What is the unofficially published content saying about \progLang{Prolog} here?}
   
-  Attempting to do AI like search stuff in \progLang{Haskell}
+  \mehul{Attempting to do AI like search stuff in \progLang{Haskell}}
 }
 
 \section{Related Books}
