Fixed small typos introduced by me.

--- a/metasyntacticvariables.tex
+++ b/metasyntacticvariables.tex
@@ -37,7 +37,7 @@ or other words like it as permanent names for anything. In filenames, a common c
 Metasyntactic variables are so called because they are variables in the metalanguage used to talk about programs
 etc; they are variables whose values are often variables (as in usages like \yyy{“}{``}the value of f(foo,bar) is
 the sum of foo and bar\yyy{”}{''}).
-However, it has been plausibly suggested that the real reason for the term \yy{“}{``}metasyntactic
+However, it has been plausibly suggested that the real reason for the term \yyy{“}{``}metasyntactic
 variable\yyy{”}{''} is that it sounds good.
 To some extent, the list of one's preferred metasyntactic variables is a cultural signature.
 They occur both in series (used for related groups of variables or objects) and as singletons.
