--- a/proto1.tex
+++ b/proto1.tex
@@ -384,7 +384,7 @@ Although one problem remains, how does one represent infinitely nested / deep ex
 for example something of the form,
 \newline
 \mint{haskell}|FlatTerm(FlatTerm (FlatTerm (FlatTerm (....... (a)))))|
-\newline
+\mbox{}\newline
 and how to represent it generically to perform operations on it since,
 \begin{minted}[linenos]{haskell}
 (FlatTerm a) != (FlatTerm (FlatTerm a))
@@ -485,7 +485,7 @@ functionality.
 %% -- begin code inserted by David                                 -- %%
 %---------------------------------------------------------------------%%
 \begin{center}
-  \textcolor{blue}{\rule{\0.95\textwidth}{0.2em}}\\[-1ex]
+  \textcolor{blue}{\rule{0.95\textwidth}{0.2em}}\\[-1ex]
   text from David
 \end{center}
 Why not continue the example that you started in Figure~\ref{tab:man-enhan-gram}?
