tagged uses of "like" that can be improved.

--- a/background.tex
+++ b/background.tex
@@ -119,7 +119,7 @@ The selection of languages is not uncommon and this not only the case with \prog
   Prolog} seems 
 to be the all time favourite for \yyy{"}{``}let's implement \progLang{Prolog} in the language X for proving it's power and 
 expressibility\yyy{"}{''}. The \progLang{Prolog} language has been partially implemented \cite{swipembedd} in other 
-languages like \progLang{Scheme} \cite{racklog}, \progLang{Lisp}  
+languages \yyy{like}{such as} \progLang{Scheme} \cite{racklog}, \progLang{Lisp}  
 \cite{komorowski1982qlog,robinson1982loglisp,robinson1980loglisp}, \progLang{Java} \cite{wikiprolog, jlog}, 
 \progLang{JavaScript} \cite{jscriptlog} and the list \cite{yieldprolog} goes on \xxx{and on}.\endnote{%
   This \P{} seems to repeat the preceding \P{}.  Merge them.
