--- a/proto2.1.tex
+++ b/proto2.1.tex
@@ -271,7 +271,7 @@ instance Applicative (FTS) where
 Aditionally helper functions for converting expressions between the two domains and translation to \textit{UTerm}.
 
 To solve the issue of infinitely deep language expressions, we find the fixed point of the expression. The unification function provided by 
-\cite{prolog-lib} is not very \progLang{Prolog} like in nature and certain adjustments need to be made. 
+\cite{prolog-lib} is not very \progLang{Prolog} like\eref{language-like} in nature and certain adjustments need to be made. 
 \begin{enumerate}
 \item Extracting variable and creating dictionaries.
 
