--- a/embedding.tex
+++ b/embedding.tex
@@ -102,7 +102,10 @@ enables encoding of search problems.\endnote{%
 \section{Related Books}
 \textcolor{blue}{Perhaps the section title should be ``Books related to embedding Programming Languges''.}
 
-As \progLang{Haskell} is relatively new in terms of being popular, its predecessors like \progLang{Scheme} have
+As \progLang{Haskell} is relatively new in terms of being popular, its predecessors like\endnote{%
+  Consider using ``such as'' in place of ``like''.
+}\elabel{such-as-like}
+\progLang{Scheme} have
 explored the territory of embedding  quite profoundly \cite{friedman05reasoned}, which aims at adding a few
 constructs to the language to bring together both styles of Declarative Programming and capture the essence of
 \progLang{Prolog}.
@@ -119,7 +122,7 @@ A general out look towards implementing \progLang{Prolog} has also been discusse
 
 Abundant literature 
 can be found \yyy{which consist of}{on} embedding detailed parts of Prolog features
-like basic constructs, search strategies and data types.
+like\eref{such-as-like} basic constructs, search strategies and data types.
 One of the major works is covered by the subsection below consisting of a series of papers from Mike Spivey and
 Silvija Seres aimed at bring \progLang{Haskell} and \progLang{Prolog} closer to each other.
 The next subsection covers the literature based on the above\endnote{%
@@ -137,7 +140,8 @@ encapsulate various aspects of an embedding of \progLang{Prolog} in \progLang{Ha
 Being the very first documented formal attempt, the work is influenced by similar embeddings of \progLang{Prolog}
 in other languages like \progLang{Scheme} and \progLang{Lisp}.
 Although the host language has distinct characteristics such as lazy evaluation and strong type system the proposed
-scheme tends to be general as the aim here is to achieve \progLang{Prolog} like working not a multi paradigm
+scheme tends to be general as the aim here is to achieve
+\progLang{Prolog} like\eref{language-like} working not a multi paradigm 
 declarative language.
 \progLang{Prolog} predicates are translated to \progLang{Haskell} functions which produce a stream of results
 lazily depicting depth first search with support for different strategies and practical operators such as
@@ -184,7 +188,7 @@ and a monadic encapsulation to turn a \progLang{Prolog} predicate into a \progLa
 %% }
 \subsection{Prolog Libraries}
 
-To replicate \progLang{Prolog}{\Huge -}like
+To replicate \progLang{Prolog} like\eref{language-like}
 capabilities Haskell seems to be already in the race\endnote{%
   Yet another metaphor whose meaning I do not understand in context.
 }
