--- a/hwh.tex
+++ b/hwh.tex
@@ -33,7 +33,8 @@ provides for embedding domain specific languages(EDSLs).
   Opting for embedding provides a \yyy{"}{``}shortcut\yyy{"}{''} to create a language which may be designed to provide specific
   functionality.
   Designing a language from scratch would require writing a parser, code generator / interpreter and possibly a
-  debugger, not to mention all the routine stuff that every language needs like variables, control structures and
+  debugger, not to mention all the routine stuff that every language
+  needs like\eref{such-as-like} variables, control structures and 
   arithmetic types.
   All of the aforementioned are provided by the host language; in this case \progLang{Haskell}.
   Examples for the same can be found here \cite{jones2001composing, meyer2008eiffel} which talk about introducing
