--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -46,7 +46,7 @@ discussed below{\large,} along with their shortcomings.
 \item
   Only two embeddings exist, one of them is old and made for \texttt{\bfseries{hugs}} a functional programming
   system based on the \progLang{Haskell 98} specification.
-  It is complex and also lacks a lot of \progLang{Prolog} like features including \textit{cuts, fails, assert}
+  It is complex and also lacks a lot of \progLang{Prolog} like\eref{language-like} features including \textit{cuts, fails, assert}
   among others.
   The second one is based off the first one to make it simple but it loses the variable search strategy support
   which allows the programmer to choose the manner in which a solution is produced.
@@ -111,8 +111,8 @@ Taking into consideration above, there is quite some room for improvement and ad
 \section{Proposal Contributions}
 
 Moving onto what this thesis shall explore, first thing's first a complete, fully functional library which comes
-close to a \progLang{Prolog} like language and has practical abilities to carry out real-world tasks.
-They include predicates like \textit{cut, assert, fail, setOf, bagOf} among others.
+close to a \progLang{Prolog} like\eref{language-like} language and has practical abilities to carry out real-world tasks.
+They include predicates like\eref{such-as-like} \textit{cut, assert, fail, setOf, bagOf} among others.
 This form{\Huge s}\endnote{%
   Not ``would form''.  ``forms'' perhaps.  You are talking about what \textbf{is} in the thesis.
 }
@@ -148,7 +148,7 @@ Lastly, how would characteristics of hybrid languages fit into and play a role i
   the original type.
   One of the outcomes is a producing a polymorphically typed embedded language within \progLang{Haskell}{\Large.}
 
-  To test it out we adopt the closed \progLang{Prolog} like language defined in \cite{prolog-lib} and open it up.
+  To test it out we adopt the closed \progLang{Prolog} like\eref{language-like} language defined in \cite{prolog-lib} and open it up.
   And for the unification part we use \cite{unification-fd-lib}, which provides a generic unification algorithm
   implementation encapsulated into a monad.\endnote{%
     See \textit{p.}~\pageref{item:no-and}, item~\ref{item:no-and}.
