tagged uses of "like" that can be improved.

--- a/introduction.tex
+++ b/introduction.tex
@@ -40,7 +40,7 @@ Perhaps one does not need to choose!
 This document looks at the attempts, improvements and future possibilities of uniting \progLang{Haskell}, a purely
 functional programming language and \progLang{Prolog}, a logical programming language so that one is not forced to
 choose.
-The task at hand involves replicating \progLang{Prolog} like features in \progLang{Haskell} such as unification and
+The task at hand involves replicating \progLang{Prolog} like\eref{language-like} features in \progLang{Haskell} such as unification and
 a single typed system.
 The thesis aims at leveraging the features of the host language in order to incorporate logic programming features
 resulting in extending \progLang{Haskell} with capabilities like unification.
@@ -169,7 +169,7 @@ The subject in question here is \progLang{Haskell} and the split personality bei
 don the avatar of \progLang{Prolog}?
 This is the million dollar question.
 
-A \progLang{Haskell} with \progLang{Prolog} like features will result in a set of characteristics which are from
+A \progLang{Haskell} with \progLang{Prolog} like\eref{language-like} features will result in a set of characteristics which are from
 both the declarative paradigms.
 %----------------------------------------------------------------------------------------------------------------------
 
