--- a/toDo.tex
+++ b/toDo.tex
@@ -41,6 +41,7 @@
   Remove sentences that begin with ``And''.
   You may have two in the entire thesis.
   No more!\label{item:no-and}
+  Also watch out for sentences that begin with ``But''.
 
 \item
   Search for all latin abbreviations (\textit{e.g.,} ``i.e.''), and be
@@ -49,7 +50,7 @@
   English, \yyy{\textit{e.g.,}}{for instance} using ``that is'' in place
   of ``i.e.''.
 
-\item
+\item \label{item:5}
   Determine how you want to punctuate items in enumerated (and other)
   list.
   Generally speaking there should be a punctuation mark at the end of an
