tagged commas and lists to fix.

--- a/introduction.tex
+++ b/introduction.tex
@@ -198,6 +198,8 @@ This can be achieved in two ways\yyy{,}{:}\endnote{%
   I believe that I have commented on the preceding elsewhere.
   The punctuation to introduce a list (that is, the end of the phrase immediately preceding the list) should not be
   ``,'', but more likely a colon, or possibly a period.
+  There should also be punctuation after each item in a list.
+  See item~\ref{item:5} in the to-do list.
 }\elabel{comma-before-list}
 \begin{description}
 \item [Embedding (\chapterReference{chap:embedding}{Chapter 4}):]
