--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -146,13 +146,16 @@ hence even \progLang{Haskell} has one called \progLang{O'Haskell} \cite{website:
 release back in 2001.\endnote{%
   The preceding sentence is awkward, although the intent is very good.
   Here is one attempt at rewording it.
-  \par
-  \textsl{
+  \par\vspace*{-1\baselineskip}
+  \begin{quote}
+    \slshape
     Combining objects with functions is important
     as object-oriented programming has become one of the most common styles of programming.
-    Hence even \progLang{Haskell} has a combined language \enparen{called \progLang{O'Haskell}, \cite{website:ohaskell}},
+    Hence even \progLang{Haskell} has a combined language
+    \enparen{called \progLang{O'Haskell}, \cite{website:ohaskell}}, 
     though it last saw a release back in 2001.
-}}
+  \end{quote}
+}
 Another prominent implementation is \progLang{OCaml} \cite{website:ocamlwiki,website:ocamllang} which adds object
 oriented capabilities with a powerful type system and module support.
 This is the case with most of the languages in this section hardly a few have survived as the new ones incorporated
