spacing changed in comment in proto1.tex .

--- a/proto1.tex
+++ b/proto1.tex
@@ -246,7 +246,9 @@ In this prototype we explore the unification aspect only.\endnote{%
 \label{fig:Trace for append}
 \end{figure}
 
-\section{What we do in this Prototype}\label{sec:proto1-what-we-do}
+In this prototype we explore the unification aspect only.
+
+\section{What we do in this Prototype}
 This prototype throws light on the process of tackling the issues involved in creating
 a data type to replicate the target language type system while conforming to the host language restrictions and also utilizing the
 benefits.
