--- a/proto1.tex
+++ b/proto1.tex
@@ -225,11 +225,12 @@ append([H|T],L2,[H|L3])  :-  append(T,L2,L3).
 \end{figure}
 
 \begin{comment}
-This chapter looks into solving the issue of conflicting type systems of the languages in question. \progLang{Haskell} is a strong
-statically typed language requiring type signature for programming constructs at compile time while \progLang{Prolog} is strong dynamically
-typed which lets through untyped programs. This prototype throws light on the process of tackling the issues involved in creating
-a data type to replicate the target language type system while conforming to the host language restrictions and also utilizing the
-benefits.
+  This chapter looks into solving the issue of conflicting type systems of the languages in question.
+  \progLang{Haskell} is a strong statically typed language requiring type signature for programming constructs at
+  compile time while \progLang{Prolog} is strong dynamically typed which lets through untyped programs.
+  This prototype throws light on the process of tackling the issues involved in creating a data type to replicate
+  the target language type system while conforming to the host language restrictions and also utilizing the
+  benefits.
 \end{comment}
 
 In this prototype we explore the unification aspect only.
