Fix for commit 4c821c56f9ce4bc30fb5e8ef9d165852afe7dc84, missing \endnote introduced.

--- a/embedding.tex
+++ b/embedding.tex
@@ -150,7 +150,7 @@ The papers provide a minimalistic extension to \progLang{Haskell} with only four
 Though no implementation exists, the synthesis and transformation techniques for functional programs have been
 \textit{logicalised} and applied to \progLang{Prolog} programs.
 Another related work \cite{spivey2000functional} looks through conventional data types so as to adapt to the
-problems at hand\{% 
+problems at hand\endnote{% 
   What are ``the problems at hand''?
 } and accommodate and jump between search strategies.
 
