Fixes for cross-references, citations, etc.

--- a/prologinhaskell.tex
+++ b/prologinhaskell.tex
@@ -107,7 +107,7 @@ Prolog in Haskell
 \begin{enumerate}
 \item logicct, \cite{logict-lib}, \cite{logict2-lib}
 
-\item logic-classes, \cite{logic-classes}
+\item logic-classes, \cite{logic-classes-lib}
 
 \item proplogic, \cite{proplogic-lib}
 
