--- a/toDo.tex
+++ b/toDo.tex
@@ -93,12 +93,9 @@
   In computer science, reflection is the ability of a computer program to examine (see type introspection) and modify its own structure and behavior (specifically the values, meta-data, properties and functions) at runtime.
   
 \item
-  The abstract is too long. UNBC guidelines limit Masters' theses
-  abstracts to 150 words.
-
-\item
   Citation \Verb!logic-classes! is not defined (in
-  \Verb!./prologinhaskell.tex!). 
+  \Verb!./prologinhaskell.tex!). {\color{red}\textbf{Fixed!}}
+  David changed the citation to \Verb!logic-classes-lib!.
 
 \item [\textbf{David}]
 \item Clean up the non-exclusive license page in unbcthesis.cls
